# lbx_pipeline

./: .gitignore  CHANGELOG.mb  CHANGELOG.md  README.md  README.txt  TODO.md  checks.md  checks.txt  install.py  package.py  setup.cfg  start.bat
Pipeline/data/: appData.json
Pipeline/python/: exec_.py
Pipeline/python/pipeline/: __init__.py  maya_launcher.py
Pipeline/python/pipeline/ui/: main.py  theme.py
RnD/: Classes_Hierarchy.vpd  Project_Hierarchy.vpd
RnD/ctypes/: gcc.txt  names.c  names.py  test.py  tuto.c  tuto.py
RnD/data_units_descriptors/: data_units.py  params.py  signals_exemple.py
RnD/nodes_factory/: nodes_factory.py
RnD/perfs/: comparisons.py  dict_get_vs_in.py  formating.py  generator_vs_list.py  iterations.py  set_vs_lists.py  uuids.py
src/lbx_pipeline/: __init__.py  commands.py  core.py  manager.py  open_api.py
src/lbx_pipeline/api/: __init__.py  attributes.py  macros.py  networks.py  nodes.py  parameters.py  projects.py  scripts.py  workspaces.py
src/lbx_pipeline/internal/: commands.py  core.py  exceptions.py  logging.py  manager.py  proxies.py  session.py
src/lbx_pipeline/open_api/: __init__.py
src/lbx_pipeline/ui/: __init__.py
src/lbx_plumber/: __init__.py  __main__.py  open_api.py  open_ui.py
src/lbx_plumber/api/: __init__.py  dependency_graphs.py  networks.py  nodes.py  parameters.py  projects.py  workspaces.py
src/lbx_plumber/internal/: common.py  core.py  logging.py
src/lbx_plumber/ui/: __init__.py  abstract.py  main_windows.py
tests/: quick_test.py  test.py  test_open_api.py  test_open_ui.py
(+65 files in other folders)
