[project]
requires-python = ">=2.7"

[metadata]
name = lbx_plumber
version = attr: lbx_plumber.VERSION
author = Lenny Blondel
author_email = lennyblondel.dev@gmail.com
description = A python based tool made to manage, keep track, manipulate and perform automated actions.
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    lbx_python>=1.0,
    lbx_gui>=1.0

[options.packages.find]
where=src
exclude =
    .git
    *.pyc
    __pycache__
    build
    dist
    venv
    tests

[flake8]
exclude =
    .git,
    __pycache__
# apply these rueles to all the python files
filename =
    *.py
max-line-length = 80
max-complexity = 10